feat: payment data

--- a/hotel-reservation/services/payment/appsettings.json
+++ b/hotel-reservation/services/payment/appsettings.json
@@ -6,5 +6,8 @@
       "HotChocolate": "Debug"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=pg-postgresql;Database=postgres;Username=postgres;Password=password;Include Error Detail=true;"
+  }
 }
