--- a/hotel-reservation/services/payment/appsettings.Development.json
+++ b/hotel-reservation/services/payment/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning",
       "HotChocolate": "Debug"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=postgres;Username=postgres;Password=password;Include Error Detail=true;"
   }
 }
