refactor: add typing to batch reader and writer

--- a/labs/device-readings/.mockery.yaml
+++ b/labs/device-readings/.mockery.yaml
@@ -19,5 +19,5 @@ packages:
 
   device-readings/internal/readings/queue:
     interfaces:
-      Producer:
-      Consumer:
+      BatchReadingWriter:
+      BatchReadingReader:
